Fix `option-buttons` jumping

--- a/frontend/src/components/App/styles.scss
+++ b/frontend/src/components/App/styles.scss
@@ -8,7 +8,9 @@
         display: flex;
         gap: 27px;
         flex-direction: column;
+        justify-content: center;
         width: 100%;
+        height: 227px;
         padding: 0 48px;
         box-sizing: border-box;
 
